refactoring - reduce file sizes
